Bug 130586 - Incorrect current page after changing the layout, undo and redo
Summary: Incorrect current page after changing the layout, undo and redo
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords: bibisected, bisected, regression
: 165518 (view as bug list)
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2020-02-11 11:38 UTC by Xisco Faulí
Modified: 2026-02-24 14:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-02-11 11:38:26 UTC
This is a follow-up of bug 130440

Steps to reproduce:
1. Open Impress
2. New Slide
3. Change layout
4. Undo 2 times
5. Redo 2 times

-> CurrentPage is 1. it should be the second

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 5d00a1c9c6e85f3d7a3e05ab485da79980c38d44
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-02-11 11:39:25 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 7624b68638d636b960715a18027163794d32fefc is the first bad commit
commit 7624b68638d636b960715a18027163794d32fefc
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Dec 13 15:02:48 2019 +0100

    source 13dfaa3c3704a5a963f9e1e5d45796472f43c80e

author	Caolán McNamara <caolanm@redhat.com>	2019-12-13 12:47:54 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-12-13 14:35:29 +0100
commit 13dfaa3c3704a5a963f9e1e5d45796472f43c80e (patch)
tree 4b34fb8828934c21752f6e97537e18602dc9f4dc
parent dcd3b5a52b343aa82933ba27be3396f46ee465ee (diff)
Resolves: tdf#129346 if nothing currently selected, select something
Comment 2 QA Administrators 2022-02-11 03:40:54 UTC Comment hidden (obsolete)
Comment 3 BogdanB 2023-05-25 19:30:08 UTC
Repro in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: aed48f26fc8acbcc3a1eaf737619ef1f33d3cb29
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Xisco Faulí 2025-09-04 17:46:36 UTC
*** Bug 165518 has been marked as a duplicate of this bug. ***
Comment 5 Eyal Rozenberg 2025-09-05 12:15:26 UTC
Note also the repro instructions in dupe bug 165518, which only require copying and pasting slides.
Comment 6 Eyal Rozenberg 2025-09-05 12:17:49 UTC
So, the regressing commit avoids a crash by ensuring some slide is selected after the selection is lost. What should probably happen is for the visible slide to be selected. There is also the question of whether the scroll position should change to reflect the new selection, or not - and that may be a tricky question, since user intent may not be the same in all situations in which the selection is lost.
Comment 7 BogdanB 2025-09-05 13:24:28 UTC
Maybe when the current slide is deleted by undo, the before slide could be selected. When a slide is duplicated, the selections could be on the pasted slide.
Comment 8 Commit Notification 2026-02-22 19:43:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c963b8a01715f3b190d9ad38499b76fe48c4e3b1

Resolves: tdf#130586 reset mbPageEventOccurred in observation start

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2026-02-22 19:44:22 UTC
I think that's the issue
Comment 10 Commit Notification 2026-02-23 11:56:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/53746e60356f2afb16e7a06580ed809184a58861

Resolves: tdf#130586 reset mbPageEventOccurred in observation start

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-02-24 14:45:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f2de299378be1641d02cb4146d6987c13e70b21

tdf#130586: move UItest to CppUnittest

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.