Resolves: tdf#130586 reset mbPageEventOccurred in observation start

mbPageEventOccurred was never reset between observations, so after a
undo/redo involving page insertion/deletion, another undo/redo operation
(e.g. layout changes) would assume it needed to do a fresh page
selection.

seen as a regression at:

commit 13dfaa3c3704a5a963f9e1e5d45796472f43c80e
Date:   Fri Dec 13 12:47:54 2019 +0000

    Resolves: tdf#129346 if nothing currently selected, select something

    in the slidesorter

but really a problem since:

commit a05fe3a8cfd4ec420eb6969d98f64e4308f14230
Date:   Tue Nov 21 12:38:21 2017 +0000

    Resolves: tdf#100950 only update page selection if pages changed

Change-Id: I86169faa9f0b2b2972dfe7065b29f94f6c6bcb85
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199990
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>